// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Support saga createLink actions Should call createLink.failure if API returns error 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`Support saga createLink actions Should call createLink.failure if an exception occurs 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`Support saga createLink actions Should call createLink.success on successful API call 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`Support saga deleteLink actions Should call deleteLink.failure if API returns error 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`Support saga deleteLink actions Should call deleteLink.failure if an exception occurs 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`Support saga deleteLink actions Should call deleteLink.success on successful API call 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`Support saga loadLinks actions Should call loadLinks.failure if API returns error 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "action": Object {
      "type": "app/support/LOAD_LINKS/REQUEST",
    },
    "channel": undefined,
  },
  "type": "PUT",
}
`;

exports[`Support saga loadLinks actions Should call loadLinks.failure if an exception occurs 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "action": Object {
      "type": "app/support/LOAD_LINKS/REQUEST",
    },
    "channel": undefined,
  },
  "type": "PUT",
}
`;

exports[`Support saga loadLinks actions Should call loadLinks.success on successful API call 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "action": Object {
      "type": "app/support/LOAD_LINKS/REQUEST",
    },
    "channel": undefined,
  },
  "type": "PUT",
}
`;
